--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "jest": {
     "testMatch": [
-      "**/*.test.js"
+      "**/*.spec.js"
     ],
     "moduleDirectories": [
       "node_modules",
