fixed the missing file matcher

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "jest": {
     "testMatch": [
-      "**/*.spec.js"
+      "**/*.spec.js",
+      "**/*.test.js"
     ],
     "moduleDirectories": [
       "node_modules",
